--- a/Rigel/Rigel.vcxproj.filters
+++ b/Rigel/Rigel.vcxproj.filters
@@ -8,6 +8,8 @@
     <ClCompile Include="src\glutils\VertexBuffer.cpp" />
     <ClCompile Include="src\glutils\VertexArray.cpp" />
     <ClCompile Include="src\glutils\IndexBuffer.cpp" />
+    <ClCompile Include="src\Camera.cpp" />
+    <ClCompile Include="src\Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\basic.shader" />
@@ -21,8 +23,11 @@
     <ClInclude Include="src\glutils\VertexArray.h" />
     <ClInclude Include="src\glutils\IndexBuffer.h" />
     <ClInclude Include="src\stb_image.h" />
+    <ClInclude Include="src\Camera.h" />
+    <ClInclude Include="src\Player.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\textures\default.png" />
+    <Image Include="res\textures\box.png" />
   </ItemGroup>
 </Project>
