Changed the test scene

--- a/Rigel/Rigel.vcxproj.filters
+++ b/Rigel/Rigel.vcxproj.filters
@@ -13,6 +13,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\basic.shader" />
+    <None Include="res\shaders\specular.shader" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Shader.h" />
