--- a/Rigel/Rigel.vcxproj.filters
+++ b/Rigel/Rigel.vcxproj.filters
@@ -12,10 +12,6 @@
     <ClCompile Include="src\Player.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="res\shaders\basic.shader" />
-    <None Include="res\shaders\specular.shader" />
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="src\Shader.h" />
     <ClInclude Include="src\Renderer.h" />
     <ClInclude Include="src\Texture.h" />
@@ -30,5 +26,9 @@
   <ItemGroup>
     <Image Include="res\textures\default.png" />
     <Image Include="res\textures\box.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="res\shaders\standart.shader" />
+    <None Include="res\shaders\color.shader" />
   </ItemGroup>
 </Project>
