--- a/Rigel/Rigel.vcxproj.filters
+++ b/Rigel/Rigel.vcxproj.filters
@@ -26,6 +26,7 @@
   <ItemGroup>
     <Image Include="res\textures\default.png" />
     <Image Include="res\textures\box.png" />
+    <Image Include="res\textures\pixel.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\standart.shader" />
