--- a/Rigel/Rigel.vcxproj.filters
+++ b/Rigel/Rigel.vcxproj.filters
@@ -9,7 +9,7 @@
     <ClCompile Include="src\glutils\VertexArray.cpp" />
     <ClCompile Include="src\glutils\IndexBuffer.cpp" />
     <ClCompile Include="src\Camera.cpp" />
-    <ClCompile Include="src\Player.cpp" />
+    <ClCompile Include="src\Spectator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Shader.h" />
@@ -21,7 +21,7 @@
     <ClInclude Include="src\glutils\IndexBuffer.h" />
     <ClInclude Include="src\stb_image.h" />
     <ClInclude Include="src\Camera.h" />
-    <ClInclude Include="src\Player.h" />
+    <ClInclude Include="src\Spectator.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\textures\default.png" />
