--- a/Rigel/Rigel.vcxproj.filters
+++ b/Rigel/Rigel.vcxproj.filters
@@ -10,6 +10,7 @@
     <ClCompile Include="src\glutils\IndexBuffer.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Spectator.cpp" />
+    <ClCompile Include="src\Input.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Shader.h" />
@@ -22,6 +23,7 @@
     <ClInclude Include="src\stb_image.h" />
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\Spectator.h" />
+    <ClInclude Include="src\Input.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\textures\default.png" />
