--- a/Rigel/Rigel.vcxproj
+++ b/Rigel/Rigel.vcxproj
@@ -136,8 +136,8 @@
     <ClCompile Include="src\glutils\IndexBuffer.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Spectator.cpp" />
-    <ClCompile Include="src\Renderer.cpp" />
-    <ClCompile Include="src\Shader.cpp" />
+    <ClCompile Include="src\glutils\Renderer.cpp" />
+    <ClCompile Include="src\glutils\Shader.cpp" />
     <ClCompile Include="src\Texture.cpp" />
     <ClCompile Include="src\glutils\VertexArray.cpp" />
     <ClCompile Include="src\glutils\VertexBuffer.cpp" />
@@ -150,8 +150,8 @@
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\glutils\IndexBuffer.h" />
     <ClInclude Include="src\Spectator.h" />
-    <ClInclude Include="src\Renderer.h" />
-    <ClInclude Include="src\Shader.h" />
+    <ClInclude Include="src\glutils\Renderer.h" />
+    <ClInclude Include="src\glutils\Shader.h" />
     <ClInclude Include="src\stb_image.h" />
     <ClInclude Include="src\Texture.h" />
     <ClInclude Include="src\glutils\VertexArray.h" />
