--- a/Rigel/Rigel.vcxproj.filters
+++ b/Rigel/Rigel.vcxproj.filters
@@ -10,6 +10,7 @@
     <ClCompile Include="src\Spectator.cpp" />
     <ClCompile Include="src\glutils\Renderer.cpp" />
     <ClCompile Include="src\glutils\Shader.cpp" />
+    <ClCompile Include="src\StaticShader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Texture.h" />
@@ -22,6 +23,12 @@
     <ClInclude Include="src\Spectator.h" />
     <ClInclude Include="src\glutils\Renderer.h" />
     <ClInclude Include="src\glutils\Shader.h" />
+    <ClInclude Include="src\StaticShader.h" />
+    <ClInclude Include="src\Material.h" />
+    <ClInclude Include="src\DirectionalLight.h" />
+    <ClInclude Include="src\PointLight.h" />
+    <ClInclude Include="src\SpotLight.h" />
+    <ClInclude Include="src\Light.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\textures\default.png" />
