--- a/Rigel/Rigel.vcxproj
+++ b/Rigel/Rigel.vcxproj
@@ -134,10 +134,11 @@
   <ItemGroup>
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\glutils\IndexBuffer.cpp" />
+    <ClCompile Include="src\Mesh.cpp" />
     <ClCompile Include="src\StaticShader.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Spectator.cpp" />
-    <ClCompile Include="src\glutils\Renderer.cpp" />
+    <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\glutils\Shader.cpp" />
     <ClCompile Include="src\Texture.cpp" />
     <ClCompile Include="src\glutils\VertexArray.cpp" />
@@ -153,9 +154,10 @@
     <ClInclude Include="src\glutils\IndexBuffer.h" />
     <ClInclude Include="src\Light.h" />
     <ClInclude Include="src\Material.h" />
+    <ClInclude Include="src\Mesh.h" />
     <ClInclude Include="src\PointLight.h" />
     <ClInclude Include="src\Spectator.h" />
-    <ClInclude Include="src\glutils\Renderer.h" />
+    <ClInclude Include="src\Renderer.h" />
     <ClInclude Include="src\glutils\Shader.h" />
     <ClInclude Include="src\SpotLight.h" />
     <ClInclude Include="src\StaticShader.h" />
