--- a/Rigel/Rigel.vcxproj.filters
+++ b/Rigel/Rigel.vcxproj.filters
@@ -8,9 +8,10 @@
     <ClCompile Include="src\glutils\IndexBuffer.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Spectator.cpp" />
-    <ClCompile Include="src\glutils\Renderer.cpp" />
     <ClCompile Include="src\glutils\Shader.cpp" />
     <ClCompile Include="src\StaticShader.cpp" />
+    <ClCompile Include="src\Mesh.cpp" />
+    <ClCompile Include="src\Renderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Texture.h" />
@@ -21,7 +22,6 @@
     <ClInclude Include="src\stb_image.h" />
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\Spectator.h" />
-    <ClInclude Include="src\glutils\Renderer.h" />
     <ClInclude Include="src\glutils\Shader.h" />
     <ClInclude Include="src\StaticShader.h" />
     <ClInclude Include="src\Material.h" />
@@ -29,6 +29,8 @@
     <ClInclude Include="src\PointLight.h" />
     <ClInclude Include="src\SpotLight.h" />
     <ClInclude Include="src\Light.h" />
+    <ClInclude Include="src\Mesh.h" />
+    <ClInclude Include="src\Renderer.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\textures\default.png" />
