--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 
 file(GLOB RIGEL_SOURCES src/*.cpp src/glutils/*.cpp)
-add_library(rigel SHARED ${RIGEL_SOURCES})
+add_library(rigel SHARED ${RIGEL_SOURCES} src/OrthographicCamera.cpp src/OrthographicCamera.h src/Camera.cpp src/Camera.h)
 target_include_directories(rigel PUBLIC src/)
 
 add_subdirectory(deps/glad)
