Update. Added Keyboard class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,8 @@ set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 
-file(GLOB RIGEL_SOURCES src/*.cpp src/render/*.cpp)
-file(GLOB RIGEL_HEADERS src/*.h src/render/*.h)
+file(GLOB RIGEL_SOURCES src/*.cpp src/render/*.cpp src/window/*.cpp)
+file(GLOB RIGEL_HEADERS src/*.h src/render/*.h src/window/*.h)
 add_library(rigel SHARED ${RIGEL_SOURCES} ${RIGEL_HEADERS})
 target_include_directories(rigel PUBLIC src/)
 
